--- a/package.json
+++ b/package.json
@@ -45,10 +45,11 @@
   },
   "preferGlobal": true,
   "dependencies": {
-    "ssh-config": "^4.1.6",
-    "fs-extra": "^11.1.1",
+    "archiver": "^6.0.2",
     "commander": "^11.1.0",
-    "node-ssh": "^13.1.0"
+    "fs-extra": "^11.1.1",
+    "node-ssh": "^13.1.0",
+    "ssh-config": "^4.1.6"
   },
   "devDependencies": {
     "electron": "^28.0.0",
@@ -83,7 +84,10 @@
       "target": [
         {
           "target": "zip",
-          "arch": ["x64", "arm64"]
+          "arch": [
+            "x64",
+            "arm64"
+          ]
         }
       ],
       "gatekeeperAssess": false,
@@ -116,11 +120,16 @@
       "target": [
         {
           "target": "nsis",
-          "arch": ["x64", "ia32"]
+          "arch": [
+            "x64",
+            "ia32"
+          ]
         },
         {
           "target": "portable",
-          "arch": ["x64"]
+          "arch": [
+            "x64"
+          ]
         }
       ],
       "icon": "assets/icons/icon.ico"
@@ -129,11 +138,15 @@
       "target": [
         {
           "target": "AppImage",
-          "arch": ["x64"]
+          "arch": [
+            "x64"
+          ]
         },
         {
           "target": "deb",
-          "arch": ["x64"]
+          "arch": [
+            "x64"
+          ]
         }
       ],
       "icon": "assets/icons/icon.png",
