Phase 2 Developer Features Complete
- Added connection multiplexing (ControlMaster, ControlPath, ControlPersist)
- Added X11 and SSH agent forwarding options
- Added dynamic port forwarding (SOCKS proxy)
- Added local port forwarding management
- Created new "Developer Workstation" template
- Enhanced frontend with Phase 2 form fields and validation
- Updated connection details display for developer features
- Added comprehensive CSS styling for new UI elements
- Updated README with Phase 2 feature descriptions

--- a/templates/aws-ec2.conf
+++ b/templates/aws-ec2.conf
@@ -6,3 +6,9 @@ Host {{name}}
     IdentityFile {{key_file}}
     StrictHostKeyChecking no
     UserKnownHostsFile /dev/null
+    
+    # Phase 1: Essential Connection Settings
+    ServerAliveInterval {{server_alive_interval}}
+    ServerAliveCountMax {{server_alive_count_max}}
+    ConnectTimeout {{connect_timeout}}
+    Compression {{compression}}
