--- a/templates/basic-server.conf
+++ b/templates/basic-server.conf
@@ -4,3 +4,10 @@ Host {{name}}
     User {{user}}
     Port {{port}}
     IdentityFile {{key_file}}
+    
+    # Phase 1: Essential Connection Settings
+    ServerAliveInterval {{server_alive_interval}}
+    ServerAliveCountMax {{server_alive_count_max}}
+    ConnectTimeout {{connect_timeout}}
+    Compression {{compression}}
+    StrictHostKeyChecking {{strict_host_key_checking}}
