--- a/templates/development.conf
+++ b/templates/development.conf
@@ -7,3 +7,9 @@ Host {{name}}
     StrictHostKeyChecking no
     UserKnownHostsFile /dev/null
     ForwardAgent yes
+    
+    # Phase 1: Essential Connection Settings
+    ServerAliveInterval {{server_alive_interval}}
+    ServerAliveCountMax {{server_alive_count_max}}
+    ConnectTimeout {{connect_timeout}}
+    Compression {{compression}}
