--- a/templates/tunnel.conf
+++ b/templates/tunnel.conf
@@ -5,3 +5,10 @@ Host {{name}}
     Port {{port}}
     DynamicForward {{socks_port}}
     IdentityFile {{key_file}}
+    
+    # Phase 1: Essential Connection Settings
+    ServerAliveInterval {{server_alive_interval}}
+    ServerAliveCountMax {{server_alive_count_max}}
+    ConnectTimeout {{connect_timeout}}
+    Compression {{compression}}
+    StrictHostKeyChecking {{strict_host_key_checking}}
