Fix username handling and session save functionality
- Fix session editing/saving functionality by properly implementing updateConnection() method
- Change username default from 'root' to current system user
- Add conditional username handling in SSH config templates
- Only include User directive when username differs from current user
- Update all form placeholders to guide users on username field usage
- Add session file patterns to .gitignore to prevent tracking
- Improve SSH key-based authentication workflow

--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,13 @@ Thumbs.db
 test-configs/
 local-ssh-configs/
 
+# Session files and user data
+sessions/
+*.session
+.sessions/
+session-*.json
+user-sessions/
+
 # Temporary files
 *.tmp
 *.tempCLAUDE.md
