Improve gitignore and remove unnecessary patch notes
- Enhance CLAUDE.md file patterns in gitignore for comprehensive coverage
- Remove PATCH_NOTES_v0.1.1.md as releases are not needed for this project

--- a/.gitignore
+++ b/.gitignore
@@ -119,5 +119,9 @@ user-sessions/
 
 # Temporary files
 *.tmp
-*.tempCLAUDE.md
+
+# Claude documentation files
+CLAUDE.md
 **/CLAUDE.md
+*.tempCLAUDE.md
+*CLAUDE*.md
