--- a/templates/developer.conf
+++ b/templates/developer.conf
@@ -1,7 +1,7 @@
 # Developer Workstation
 Host {{name}}
     HostName {{host}}
-    User {{user}}
+{{user_line}}
     Port {{port}}
     IdentityFile {{key_file}}
     
