--- a/templates/jump-host.conf
+++ b/templates/jump-host.conf
@@ -1,7 +1,7 @@
 # Jump Host Configuration
 Host {{name}}
     HostName {{host}}
-    User {{user}}
+{{user_line}}
     Port {{port}}
     ProxyJump {{jump_host}}
     IdentityFile {{key_file}}
