--- a/templates/port-forward.conf
+++ b/templates/port-forward.conf
@@ -1,7 +1,7 @@
 # Port Forwarding Configuration
 Host {{name}}
     HostName {{host}}
-    User {{user}}
+{{user_line}}
     Port {{port}}
     LocalForward {{local_port}} {{remote_host}}:{{remote_port}}
     IdentityFile {{key_file}}
