--- a/templates/tunnel.conf
+++ b/templates/tunnel.conf
@@ -1,7 +1,7 @@
 # SSH Tunnel Configuration
 Host {{name}}
     HostName {{host}}
-    User {{user}}
+{{user_line}}
     Port {{port}}
     DynamicForward {{socks_port}}
     IdentityFile {{key_file}}
