--- a/templates/development.conf
+++ b/templates/development.conf
@@ -1,7 +1,7 @@
 # Development Server
 Host {{name}}
     HostName {{host}}
-    User {{user}}
+{{user_line}}
     Port {{port}}
     IdentityFile {{key_file}}
     StrictHostKeyChecking no
