--- a/package.json
+++ b/package.json
@@ -7,20 +7,11 @@
     "ssh-manager": "./bin/ssh-manager.js"
   },
   "scripts": {
-    "start": "electron .",
+    "start": "if [ ! -d node_modules ]; then echo 'Installing dependencies...' && npm install; fi && electron .",
     "dev": "electron . --dev",
-    "build": "electron-builder",
-    "test": "jest",
-    "lint": "eslint src/",
     "create-shortcut": "node bin/ssh-manager.js create-shortcut",
     "postinstall": "node scripts/postinstall.js",
-    "preuninstall": "node scripts/preuninstall.js",
-    "build:mac": "electron-builder --mac",
-    "build:win": "electron-builder --win",
-    "build:linux": "electron-builder --linux",
-    "build:all": "electron-builder -mwl",
-    "pack": "npm run build && npm pack",
-    "distribute": "npm run build && npm run pack"
+    "preuninstall": "node scripts/preuninstall.js"
   },
   "keywords": [
     "ssh",
@@ -47,118 +38,9 @@
   "dependencies": {
     "archiver": "^6.0.2",
     "commander": "^11.1.0",
+    "electron": "^28.0.0",
     "fs-extra": "^11.1.1",
     "node-ssh": "^13.1.0",
     "ssh-config": "^4.1.6"
-  },
-  "devDependencies": {
-    "electron": "^28.0.0",
-    "electron-builder": "^24.6.4",
-    "eslint": "^8.50.0",
-    "jest": "^29.7.0"
-  },
-  "build": {
-    "appId": "com.ssh-manager.app",
-    "productName": "SSH Manager",
-    "directories": {
-      "output": "dist",
-      "buildResources": "assets"
-    },
-    "files": [
-      "src/**/*",
-      "assets/templates/**/*",
-      "bin/**/*",
-      "package.json",
-      "!src/**/*.{js.map,ts}",
-      "!assets/icons/build/**/*"
-    ],
-    "extraResources": [
-      {
-        "from": "assets/templates",
-        "to": "templates"
-      }
-    ],
-    "mac": {
-      "category": "public.app-category.developer-tools",
-      "icon": "assets/icons/icon.icns",
-      "target": [
-        {
-          "target": "zip",
-          "arch": [
-            "x64",
-            "arm64"
-          ]
-        }
-      ],
-      "gatekeeperAssess": false,
-      "hardenedRuntime": true,
-      "darkModeSupport": true,
-      "type": "distribution"
-    },
-    "dmg": {
-      "title": "${productName} ${version}",
-      "icon": "assets/icons/icon.icns",
-      "contents": [
-        {
-          "x": 130,
-          "y": 220
-        },
-        {
-          "x": 410,
-          "y": 220,
-          "type": "link",
-          "path": "/Applications"
-        }
-      ],
-      "window": {
-        "width": 540,
-        "height": 380
-      },
-      "artifactName": "${productName}-${version}-${arch}.${ext}"
-    },
-    "win": {
-      "target": [
-        {
-          "target": "nsis",
-          "arch": [
-            "x64",
-            "ia32"
-          ]
-        },
-        {
-          "target": "portable",
-          "arch": [
-            "x64"
-          ]
-        }
-      ],
-      "icon": "assets/icons/icon.ico"
-    },
-    "linux": {
-      "target": [
-        {
-          "target": "AppImage",
-          "arch": [
-            "x64"
-          ]
-        },
-        {
-          "target": "deb",
-          "arch": [
-            "x64"
-          ]
-        }
-      ],
-      "icon": "assets/icons/icon.png",
-      "category": "Network"
-    },
-    "nsis": {
-      "oneClick": false,
-      "allowToChangeInstallationDirectory": true,
-      "createDesktopShortcut": true,
-      "createStartMenuShortcut": true,
-      "shortcutName": "${productName}"
-    },
-    "publish": null
   }
 }
