--- a/.gitignore
+++ b/.gitignore
@@ -1,88 +1,78 @@
-# Dependencies
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Build outputs
-dist/
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
 build/
-out/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
-# Electron
-*.log
-*.pid
-*.seed
-*.pid.lock
+# Virtual environments
+venv/
+env/
+ENV/
+.venv/
+.env/
 
-# Runtime data
-pids/
-logs/
+# PyInstaller
+*.manifest
+*.spec
 
-# Coverage directory used by tools like istanbul
-coverage/
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
 
-# nyc test coverage
-.nyc_output
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
 
-# Grunt intermediate storage
-.grunt
+# Jupyter Notebook
+.ipynb_checkpoints
 
-# Bower dependency directory
-bower_components/
+# IPython
+profile_default/
+ipython_config.py
 
-# node-waf configuration
-.lock-wscript
+# pyenv
+.python-version
 
-# Compiled binary addons
-build/Release
+# pipenv
+Pipfile.lock
 
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variables file
+# Environment variables
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# parcel-bundler cache
-.cache
-.parcel-cache
-
-# next.js build output
-.next
-
-# nuxt.js build output
-.nuxt
-
-# vuepress build output
-.vuepress/dist
-
-# Serverless directories
-.serverless
-
-# FuseBox cache
-.fusebox/
-
-# DynamoDB Local files
-.dynamodb/
-
-# TernJS port file
-.tern-port
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
 
 # IDE files
 .vscode/
@@ -100,11 +90,6 @@ jspm_packages/
 ehthumbs.db
 Thumbs.db
 
-# Electron specific
-/app/dist/
-/release/
-/resources/
-
 # SSH Manager specific
 # Don't commit user's actual SSH configurations
 test-configs/
@@ -120,8 +105,7 @@ user-sessions/
 # Temporary files
 *.tmp
 
-# Claude documentation files
-CLAUDE.md
-**/CLAUDE.md
-*.tempCLAUDE.md
-*CLAUDE*.md
+# Development and testing
+__pycache__/
+*.pyc
+*.pyo
